--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-long-range-arena/raw_datasets/
-long-range-arena/cache_dir/
-long-range-arena/trained_models/
+# Ignore all dotfiles
+.*
+
+# But keep this file
+!.gitignore
+
+# Ignore Python cache and other __* files
+__*
